--- a/eisitirio/templates/layout.html
+++ b/eisitirio/templates/layout.html
@@ -82,7 +82,7 @@
                 </section>
                 <footer class="row" style="padding-top: 5rem;">
                     <section id="copyright" class="large-8 large-centered columns">
-                        <p>&copy; {{ current_year }} {{ template_config['BALL_NAME'] }}. All rights reserved. <a href="{{ template_config['WEBSITE_EMAIL_LINK'] }}" target="_blank">Webmaster</a></p>
+                        <p>&copy; 2018 {{ template_config['BALL_NAME'] }}. All rights reserved. <a href="{{ template_config['WEBSITE_EMAIL_LINK'] }}" target="_blank">Webmaster</a></p>
                     </section>
                 </footer>
             </div>
