changes minor typo in FAQs

--- a/eisitirio/templates/front/faqs.html
+++ b/eisitirio/templates/front/faqs.html
@@ -11,7 +11,7 @@
 
         <ul>
             <li><strong>General Release opens at 10am Saturday 28th January.</strong></li>
-            <li>Each account holder is eligible to purchase up to four tickets each<./li>
+            <li>Each account holder is eligible to purchase up to four tickets each</li>
         </ul>
 
         <h4>Ticket payment</h4>
