Bring repo up to date with production code

--- a/eisitirio/static/scss/_variables.scss
+++ b/eisitirio/static/scss/_variables.scss
@@ -27,9 +27,9 @@ $include-open-sans: false !default;
 
 $blockquote-font-color: #ffffff !default;
 
-$header-bg: #333333; //#950219;
+$header-bg: #d3bdaf; //#950219;
 $subnav-link-padding: 0.9rem;
-$subnav-font-size: 0.75rem;
+$subnav-font-size: 1rem;
 $subnav-link-opacity: 0.15;
 $header-height: 0.5rem;
 $transition: all .35s ease-in-out;
