--- a/eisitirio/templates/purchase/payment_processed.html
+++ b/eisitirio/templates/purchase/payment_processed.html
@@ -98,9 +98,9 @@
         <header class="header">
             <div class="header-text">
                 <a href="https://www.kebleball.com/tickets/dashboard">
-                    <h2 class="headline">Keble Ball 2018</h2>
-                    <h1 class="headline">APOPHIS</h1>
-                    <h4 class="headline">05052018</h3>
+                    <h2 class="headline">Keble Ball 2019</h2>
+                    <h1 class="headline">GAIA MACHINA</h1>
+                    <h4 class="headline">04/05/2019</h3>
                 </a>
             </div>
             <ul class="header-subnav">
@@ -134,7 +134,7 @@
                 </section>
                 <footer class="row" style="padding-top: 5rem;">
                     <section id="copyright" class="large-8 large-centered columns" style="text-align:center;">
-                        <p>&copy; 2018 Keble Ball. All rights reserved. <a href="http://www.google.com/recaptcha/mailhide/d?k=01VW2HusQat4KpnmQYJBSfhQ==&amp;c=0pBadqH9ae41gTIaahTM78kkmPpv_-wELjktV6Zs-d0=" target="_blank">Webmaster</a></p>
+                        <p>&copy; 2019 Keble Ball. All rights reserved. <a href="http://www.google.com/recaptcha/mailhide/d?k=01VW2HusQat4KpnmQYJBSfhQ==&amp;c=0pBadqH9ae41gTIaahTM78kkmPpv_-wELjktV6Zs-d0=" target="_blank">Webmaster</a></p>
                     </section>
                 </footer>
             </div>
