--- a/eisitirio/templates/purchase/purchase_home.html
+++ b/eisitirio/templates/purchase/purchase_home.html
@@ -11,6 +11,7 @@
                 <div class="small-12 large-5 columns">
                 <li>
                     <h5>Choose Number of Tickets</h5>
+		    <p> All prices include a &pound;1 booking fee.</p>
                     <table id="ticket_type_table">
                         <thead>
                             <th>Ticket type</th>
