--- a/eisitirio/templates/layout.html
+++ b/eisitirio/templates/layout.html
@@ -6,8 +6,8 @@
         <meta name="author" content="Samuel Littley, Timothy Zakian and Jack Arthur">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
-        <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}?v=2" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}?v=3" />
+        <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}?v=3" />
         {% if template_config['ENABLE_ANALYTICS'] %}
             <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -21,6 +21,12 @@
             </script>
         {% endif %}
         {% block extra_head %}{% endblock %}
+        <script type="text/javascript" src="//static.queue-it.net/script/queueclient.min.js"></script>
+        <script 
+            data-queueit-c="kebleball" 
+            type="text/javascript" 
+            src="//static.queue-it.net/script/queueconfigloader.min.js">
+        </script>
     </head>
     <body>
 
@@ -34,11 +40,16 @@
         </section>
         <div class="header-text">
           <a href="/">
+            <p style="margin-bottom: 10cm;"></p>
+	    <!--
             <h2>{{ template_config['TITLE'] }}</h2>
             <h1 class="headline">{{ template_config['THEME'] }}</h1>
             <h3>{{ template_config['START_TIME'].strftime(template_config['DATE_FORMAT']) }}</h3>
-          </a>
+            -->
+	  </a>
         </div>
+     </header>
+     <section>
         <ul class="header-subnav">
           {% block navigation %}
             {% if not current_user.is_anonymous %}
@@ -55,7 +66,7 @@
             {% endif %}
           {% endblock %}
         </ul>
-      </header>
+      </section>
 
         <div id="wrapper" class="row">
             <div class="columns" style="padding-top: 0.5rem;">
@@ -82,7 +93,7 @@
                 </section>
                 <footer class="row" style="padding-top: 5rem;">
                     <section id="copyright" class="large-8 large-centered columns">
-                        <p>&copy; {{ current_year }} {{ template_config['BALL_NAME'] }}. All rights reserved. <a href="{{ template_config['WEBSITE_EMAIL_LINK'] }}" target="_blank">Webmaster</a></p>
+                        <p>&copy; 2019 {{ template_config['BALL_NAME'] }}. All rights reserved. <a href="{{ template_config['WEBSITE_EMAIL_LINK'] }}" target="_blank">Webmaster</a></p>
                     </section>
                 </footer>
             </div>
