--- a/eisitirio/templates/blocks/admin-navigation.html
+++ b/eisitirio/templates/blocks/admin-navigation.html
@@ -6,6 +6,7 @@
 <li><a href="{{ url_for('admin_vouchers.vouchers') }}">Manage Vouchers</a>
 <li><a href="{{ url_for('admin_tickets.validate_ticket') }}">Validate Tickets</a>
 <li><a href="{{ url_for('admin_users.verify_affiliations') }}">Verify Affiliations</a>
+<li><a href="{{ url_for('admin_users.manage_affiliation_list') }}">Manage Affiliation List</a>
 <li><a href="{{ url_for('admin_photos.verify_photos') }}">Verify Photos</a>
 <li><a href="{{ url_for('admin_postage.postage_dashboard') }}">Postage Dashboard</a>
 
