--- a/eisitirio/templates/admin_tickets/view_ticket.html
+++ b/eisitirio/templates/admin_tickets/view_ticket.html
@@ -10,6 +10,7 @@
         {% else %}
             <h4>Ticket Details</h4>
             <p><strong>Price</strong>: &pound;{{ '%.2f' % (ticket.price / 100.0) }}</p>
+            <p><strong>Addons</strong>: {{ ticket.addons_str }}</p>
             <p><strong>Owner</strong>: <a href="{{ url_for('admin_users.view_user', user_id=ticket.owner_id) }}">{{ ticket.owner.full_name }}</a></p>
             {% if ticket.has_holder() %}
                 <p><strong>Holder</strong>: <a href="{{ url_for('admin_users.view_user', user_id=ticket.holder_id) }}">{{ ticket.holder.full_name }}</a></p>
