--- a/eisitirio/templates/admin_users/view_user.html
+++ b/eisitirio/templates/admin_users/view_user.html
@@ -16,6 +16,14 @@
             <p><strong>Phone</strong>: {{ user.phone }}</p>
             <p><strong>College</strong>: {{ user.college.name }}</p>
             <p><strong>Affiliation</strong>: {{ user.affiliation.name }}</p>
+            {% if user.affiliation_list_entry != None %}
+                <p>
+                    <strong>Affiliation List Entry</strong>: {{ user.affiliation_list_entry.affiliation.name }}
+                    {% if user.affiliation_list_entry.affiliation_id != None %}
+                        (ID: {{ user.affiliation_list_entry.affiliation_id }})
+                    {% endif %}
+                </p>
+            {% endif %}
             {% if user.battels != None %}
                 {% if not user.battels.manual %}
                     <p><strong>Battels ID</strong>: {{ user.battels.battels_id }}</p>
